# ses-mailer

./: .gitignore  CHANGELOG  README.md  ses_mailer.py  ses_mailer2.py  setup.cfg  setup.py  test.py  test_ses_mailer.py
ses_mailer/: __init__.py
ses_mailer/templates/: confirm_account.txt  reset_password.txt
src/ses_mailer/: __init__.py
templates/: change_email.txt  reset_password.txt
