[metadata]
# replace with your username:
name = SES-Mailer-3
version = 0.15.4
author = Tom Clark
author_email = tclark@requisitesystems.com
description = A simple module to send email via AWS SES
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tclark/ses-mailer
project_urls =
    Bug Tracker = https://github.com/tclark/ses-mailer/issues
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7
install_requires = 
    jinja2
    boto3

[options.packages.find]
where = src
exclude = test_config.py
